MAINT-2609 Add test with nested memberOf ECL query